--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,15 @@
 [build-system]
-requires = ["setuptools", "setuptools-scm"]
+requires = [
+    "setuptools>=42",
+    "wheel",
+    "torch>=2.3.0",  # Ensure CUDA compatibility
+    "ninja",  # Required for Triton on Windows
+    # Conditional dependencies for Windows
+    "xformers==0.0.26.post1; sys_platform != 'win32'",
+    "xformers>=0.0.25; sys_platform == 'win32'",  # Windows-compatible xformers
+    "bitsandbytes>=0.43.0; sys_platform != 'win32'",
+    "bitsandbytes-windows>=0.43.0; sys_platform == 'win32'",  # Windows-specific bitsandbytes
+]
 build-backend = "setuptools.build_meta"
 
 [project]
@@ -8,51 +18,35 @@ dynamic = ["version"]
 description = "2-5X faster LLM finetuning"
 readme = "README.md"
 requires-python = ">=3.9"
-license = {file = "LICENSE"}
-keywords = ["ai", "llm",]
+license = { file = "LICENSE" }
+keywords = ["ai", "llm"]
 authors = [
-    {email = "info@unsloth.ai"},
-    {name = "Unsloth AI team"},
+    { name = "Unsloth AI team", email = "info@unsloth.ai" }
 ]
 maintainers = [
-    {name = "Daniel Han", email = "danielhanchen@gmail.com"},
-    {name = "Michael Han", email = "info@unsloth.ai"},
+    { name = "Daniel Han", email = "danielhanchen@gmail.com" },
+    { name = "Michael Han", email = "info@unsloth.ai" }
 ]
 classifiers = [
     "Programming Language :: Python",
 ]
 
-[tool.setuptools.dynamic]
-version = {attr = "unsloth.models._utils.__version__"}
-
-[tool.setuptools]
-include-package-data = false
-
-[tool.setuptools.packages.find]
-exclude = ["images*"]
-
 [project.optional-dependencies]
 triton = [
-    "triton @ https://github.com/woct0rdho/triton-windows/releases/download/v3.1.0-windows.post5/triton-3.1.0-cp39-cp39-win_amd64.whl ; python_version=='3.9' and platform_system == 'Windows'",
-    "triton @ https://github.com/woct0rdho/triton-windows/releases/download/v3.1.0-windows.post5/triton-3.1.0-cp310-cp310-win_amd64.whl ; python_version=='3.10' and platform_system == 'Windows'",
-    "triton @ https://github.com/woct0rdho/triton-windows/releases/download/v3.1.0-windows.post5/triton-3.1.0-cp311-cp311-win_amd64.whl ; python_version=='3.11' and platform_system == 'Windows'",
-    "triton @ https://github.com/woct0rdho/triton-windows/releases/download/v3.1.0-windows.post5/triton-3.1.0-cp312-cp312-win_amd64.whl ; python_version=='3.12' and platform_system == 'Windows'",
+    "triton @ https://github.com/woct0rdho/triton-windows/releases/download/v3.1.0-windows.post5/triton-3.1.0-cp39-cp39-win_amd64.whl ; python_version=='3.9' and sys_platform=='win32'",
+    "triton @ https://github.com/woct0rdho/triton-windows/releases/download/v3.1.0-windows.post5/triton-3.1.0-cp310-cp310-win_amd64.whl ; python_version=='3.10' and sys_platform=='win32'",
+    "triton @ https://github.com/woct0rdho/triton-windows/releases/download/v3.1.0-windows.post5/triton-3.1.0-cp311-cp311-win_amd64.whl ; python_version=='3.11' and sys_platform=='win32'",
+    "triton @ https://github.com/woct0rdho/triton-windows/releases/download/v3.1.0-windows.post5/triton-3.1.0-cp312-cp312-win_amd64.whl ; python_version=='3.12' and sys_platform=='win32'"
 ]
+
 huggingface = [
     "unsloth_zoo>=2025.2.5",
-    "packaging",
-    "tyro",
     "transformers>=4.46.1,!=4.47.0",
     "datasets>=2.16.0",
     "sentencepiece>=0.2.0",
-    "tqdm",
-    "psutil",
-    "wheel>=0.42.0",
-    "numpy",
     "accelerate>=0.34.1",
     "trl>=0.7.9,!=0.9.0,!=0.9.1,!=0.9.2,!=0.9.3",
     "peft>=0.7.1,!=0.11.0",
-    "protobuf<4.0.0",
     "huggingface_hub",
     "hf_transfer",
     "unsloth[triton]",
