--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,7 +22,7 @@ classifiers = [
     "Programming Language :: Python",
 ]
 dependencies = [
-    "unsloth_zoo>=2025.3.2",
+    "unsloth_zoo>=2025.3.4",
     "torch>=2.4.0",
     "xformers>=0.0.27.post2",
     "bitsandbytes",
@@ -57,7 +57,7 @@ exclude = ["images*"]
 
 [project.optional-dependencies]
 huggingface = [
-    "unsloth_zoo>=2025.3.2",
+    "unsloth_zoo>=2025.3.4",
     "packaging",
     "tyro",
     "transformers>=4.46.1,!=4.47.0",
@@ -287,7 +287,7 @@ colab-ampere-torch220 = [
     "unsloth[flashattention]",
 ]
 colab-new = [
-    "unsloth_zoo>=2025.2.6",
+    "unsloth_zoo>=2025.3.4",
     "packaging",
     "tyro",
     "transformers>=4.46.1,!=4.47.0",
@@ -305,7 +305,7 @@ colab-new = [
 ]
 colab-no-deps = [
     "accelerate>=0.34.1",
-    "trl>=0.7.9,!=0.9.0,!=0.9.1,!=0.9.2,!=0.9.3,<0.15.0",
+    "trl>=0.7.9,!=0.9.0,!=0.9.1,!=0.9.2,!=0.9.3,<0.15.0,<=0.15.2",
     "peft>=0.7.1",
     "xformers<0.0.27",
     "bitsandbytes>=0.43.3",
