--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,6 +41,7 @@ triton = [
 
 huggingface = [
     "unsloth_zoo>=2025.3.9",
+    "unsloth_studio>=2025.3.1",
     "packaging",
     "tyro",
     "transformers>=4.46.1,!=4.47.0",
@@ -355,6 +356,7 @@ colab-ampere-torch220 = [
 ]
 colab-new = [
     "unsloth_zoo>=2025.3.9",
+    "unsloth_studio>=2025.3.1",
     "packaging",
     "tyro",
     "transformers>=4.46.1,!=4.47.0",
