--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,9 +31,14 @@ include-package-data = false
 [tool.setuptools.packages.find]
 exclude = ["images*"]
 
+[project.optional-dependencies]
+triton = [
+    "triton-windows ; platform_system == 'Windows'",
+]
+
 huggingface = [
-    "unsloth_zoo>=2025.3.13",
-    "packaging>=24.1",
+    "unsloth_zoo>=2025.3.11",
+    "packaging",
     "tyro",
     "transformers>=4.46.1,!=4.47.0",
     "datasets>=2.16.0",
@@ -48,12 +53,12 @@ huggingface = [
     "protobuf<4.0.0",
     "huggingface_hub",
     "hf_transfer",
+    "unsloth[triton]",
 ]
 windows=[
     "unsloth[huggingface]",
     "bitsandbytes>=0.41.1 ; platform_system == 'Windows'",
     "xformers>=0.0.22.post7 ; platform_system == 'Windows'",
-    "triton_windows ; platform_system == 'Windows'",
 ]
 cu118only = [
     "xformers @ https://download.pytorch.org/whl/cu118/xformers-0.0.22.post7%2Bcu118-cp39-cp39-manylinux2014_x86_64.whl ; python_version=='3.9' and platform_system == 'Linux'",
@@ -328,7 +333,7 @@ colab-ampere-torch211 = [
     "unsloth[huggingface]",
     "bitsandbytes>=0.43.3",
     "unsloth[cu121onlytorch211]",
-    "packaging>=24.1",
+    "packaging",
     "ninja",
     "flash-attn>=2.6.3",
 ]
@@ -341,13 +346,13 @@ colab-ampere-torch220 = [
     "unsloth[huggingface]",
     "bitsandbytes>=0.43.3",
     "unsloth[cu121onlytorch220]",
-    "packaging>=24.1",
+    "packaging",
     "ninja",
     "flash-attn>=2.6.3",
 ]
 colab-new = [
-    "unsloth_zoo>=2025.3.13",
-    "packaging>=24.1",
+    "unsloth_zoo>=2025.3.9",
+    "packaging",
     "tyro",
     "transformers>=4.46.1,!=4.47.0",
     "datasets>=2.16.0",
@@ -360,6 +365,7 @@ colab-new = [
     "huggingface_hub",
     "hf_transfer",
     "bitsandbytes>=0.43.3",
+    "unsloth[triton]",
 ]
 colab-no-deps = [
     "accelerate>=0.34.1",
@@ -373,7 +379,7 @@ colab = [
     "unsloth[cu121]",
 ]
 flashattention = [
-    "packaging>=24.1",
+    "packaging ; platform_system == 'Linux'",
     "ninja ; platform_system == 'Linux'",
     "flash-attn>=2.6.3 ; platform_system == 'Linux'",
 ]
