--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ dynamic = ["version"]
 description = "Utils for Unsloth"
 readme = "README.md"
 requires-python = ">=3.9,<3.13"
-license = {file = "LICENSE"}
+license = "LGPL-3.0-or-later"
 keywords = ["ai", "llm",]
 authors = [
     {email = "info@unsloth.ai"},
