--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ dynamic = ["version"]
 description = "2-5X faster LLM finetuning"
 readme = "README.md"
 requires-python = ">=3.9,<3.13"
-license = {file = "LICENSE"}
+license = "Apache-2.0"
 keywords = ["ai", "llm",]
 authors = [
     {email = "info@unsloth.ai"},
