--- a/pyproject.toml
+++ b/pyproject.toml
@@ -55,7 +55,7 @@ huggingface = [
     "trl>=0.7.9,!=0.9.0,!=0.9.1,!=0.9.2,!=0.9.3,!=0.15.0,<=0.15.2",
     "peft>=0.7.1,!=0.11.0",
     "protobuf<4.0.0",
-    "huggingface_hub",
+    "huggingface_hub[hf_xet] >= 0.30.0",
     "hf_transfer",
     "unsloth[triton]",
     "msgspec",
@@ -367,7 +367,7 @@ colab-new = [
     "wheel>=0.42.0",
     "numpy",
     "protobuf<4.0.0",
-    "huggingface_hub",
+    "huggingface_hub[hf_xet] >= 0.30.0",
     "hf_transfer",
     "bitsandbytes>=0.43.3",
     "unsloth[triton]",
