--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,16 +32,12 @@ include-package-data = false
 exclude = ["images*", "tests*"]
 
 [project.optional-dependencies]
-dev = [
-    "pytest",
-]
-
 triton = [
     "triton-windows ; platform_system == 'Windows'",
 ]
 
 huggingface = [
-    "unsloth_zoo>=2025.4.2",
+    "unsloth_zoo>=2025.4.3",
     "packaging",
     "tyro",
     "transformers>=4.46.1,!=4.47.0",
@@ -55,10 +51,9 @@ huggingface = [
     "trl>=0.7.9,!=0.9.0,!=0.9.1,!=0.9.2,!=0.9.3,!=0.15.0,<=0.15.2",
     "peft>=0.7.1,!=0.11.0",
     "protobuf<4.0.0",
-    "huggingface_hub[hf_xet] >= 0.30.0",
+    "huggingface_hub",
     "hf_transfer",
     "unsloth[triton]",
-    "msgspec",
 ]
 windows=[
     "unsloth[huggingface]",
@@ -356,7 +351,7 @@ colab-ampere-torch220 = [
     "flash-attn>=2.6.3",
 ]
 colab-new = [
-    "unsloth_zoo>=2025.4.2",
+    "unsloth_zoo>=2025.4.3",
     "packaging",
     "tyro",
     "transformers>=4.46.1,!=4.47.0",
@@ -367,11 +362,10 @@ colab-new = [
     "wheel>=0.42.0",
     "numpy",
     "protobuf<4.0.0",
-    "huggingface_hub[hf_xet] >= 0.30.0",
+    "huggingface_hub",
     "hf_transfer",
     "bitsandbytes>=0.43.3",
     "unsloth[triton]",
-    "msgspec",
 ]
 colab-no-deps = [
     "accelerate>=0.34.1",
