--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,7 +40,7 @@ huggingface = [
     "unsloth_zoo>=2025.5.1",
     "packaging",
     "tyro",
-    "transformers>=4.51.3,!=4.47.0",
+    "transformers==4.51.3,!=4.47.0",
     "datasets>=2.16.0",
     "sentencepiece>=0.2.0",
     "tqdm",
@@ -384,7 +384,7 @@ colab-new = [
     "unsloth_zoo>=2025.5.1",
     "packaging",
     "tyro",
-    "transformers>=4.51.3,!=4.47.0",
+    "transformers==4.51.3,!=4.47.0",
     "datasets>=2.16.0",
     "sentencepiece>=0.2.0",
     "tqdm",
