--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,7 +22,7 @@ classifiers = [
     "Programming Language :: Python",
 ]
 dependencies = [
-    "unsloth_zoo>=2025.4.4",
+    "unsloth_zoo>=2025.5.1",
     "torch>=2.4.0",
     "xformers>=0.0.27.post2",
     "bitsandbytes",
@@ -58,10 +58,10 @@ exclude = ["images*", "tests*", "kernels/moe*"]
 
 [project.optional-dependencies]
 huggingface = [
-    "unsloth_zoo>=2025.4.4",
+    "unsloth_zoo>=2025.5.1",
     "packaging",
     "tyro",
-    "transformers>=4.51.3,!=4.47.0",
+    "transformers==4.51.3,!=4.47.0",
     "datasets>=2.16.0",
     "sentencepiece>=0.2.0",
     "tqdm",
@@ -304,7 +304,7 @@ colab-ampere-torch220 = [
     "unsloth[flashattention]",
 ]
 colab-new = [
-    "unsloth_zoo>=2025.4.4",
+    "unsloth_zoo>=2025.5.1",
     "packaging",
     "tyro",
     "transformers==4.51.3,!=4.47.0",
