--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,8 +50,7 @@ huggingface = [
     "accelerate>=0.34.1",
     "trl>=0.7.9,!=0.9.0,!=0.9.1,!=0.9.2,!=0.9.3,!=0.15.0",
     "peft>=0.7.1,!=0.11.0",
-    "protobuf<4.0.0 ; platform_system == 'Windows'",
-    "protobuf ; platform_system != 'Windows'",
+    "protobuf",
     "huggingface_hub",
     "hf_transfer",
     "unsloth[triton]",
@@ -392,8 +391,7 @@ colab-new = [
     "psutil",
     "wheel>=0.42.0",
     "numpy",
-    "protobuf<4.0.0 ; platform_system == 'Windows'",
-    "protobuf ; platform_system != 'Windows'",
+    "protobuf",
     "huggingface_hub",
     "hf_transfer",
     "bitsandbytes>=0.45.5",
