--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,9 +6,9 @@ requires = [
     "packaging>=24.2",
     "setuptools>=77.0.3,<80.0.0",
     "setuptools-scm>=8.0",
-    "torch<=2.7.0",
     "wheel",
-    "jinja2"
+    "jinja2",
+    "torch<=2.7.0",
 ]
 build-backend = "setuptools.build_meta"
 
