Cmake and ninja move

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,6 @@
 [build-system]
 # Should be mirrored in requirements/build.txt
 requires = [
-    "cmake>=3.26",
-    "ninja",
     "packaging>=24.2",
     "setuptools>=77.0.3,<80.0.0",
     "setuptools-scm>=8.0",
@@ -13,7 +11,7 @@ build-backend = "setuptools.build_meta"
 name = "unsloth"
 description = "2-5X faster LLM finetuning"
 readme = "README.md"
-requires-python = ">=3.9,<3.13"
+requires-python = ">=3.9"
 dynamic = ["version", "dependencies", "optional-dependencies"]
 license = { file = "LICENSE" }
 keywords = ["ai", "llm",]
